kube-manifests/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-app-loadbalancer
  labels:
    app: python-app

spec:
  type: LoadBalancer
  selector:
    app: python-app
  ports:
    - port: 80
      targetPort: 8888
