kube-manifests/app2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app2-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app2
  template:
    metadata:
      name: python-app2-pod
      labels: 
        app: python-app2
    spec:
      containers:
        - name: python-app2-container
          image: pinghuang/k8s-poc-app2:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: python-app2-deployment
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: python-app2-deployment
