kube-manifests/apps-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-poc-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /k8s-poc-app1(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: python-app-deployment
            port: 
              number: 80
      - path: /k8s-poc-app2(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: python-app2-deployment
            port: 
              number: 80          
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: python-app-deployment
            port: 
              number: 80
